--- a/meeting_invitation_with_logo.html
+++ b/meeting_invitation_with_logo.html
@@ -27,7 +27,7 @@
             margin-bottom: 30px;
         }
         .school-logo {
-            margin-bottom: 15px; /* Reduced margin */
+            margin-bottom: 15px;
         }
         h1 {
             color: #333;
@@ -46,16 +46,16 @@
         }
         input[type="text"],
         textarea {
-            width: calc(100% - 20px); /* Adjust width for padding */
+            width: calc(100% - 20px);
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 4px;
             font-size: 1em;
-            box-sizing: border-box; /* Include padding and border in the element's total width and height */
+            box-sizing: border-box;
         }
         textarea {
-            resize: vertical; /* Allow vertical resizing */
-            min-height: 80px; /* Minimum height for textarea */
+            resize: vertical;
+            min-height: 80px;
         }
         .agenda-item {
             display: flex;
@@ -63,26 +63,67 @@
             margin-bottom: 10px;
         }
         .agenda-item span {
-            margin-left: 10px; /* Space between number and input */
+            margin-left: 10px;
             color: #555;
             font-weight: bold;
         }
-        /* Footer Styles */
         .footer-section {
             margin-top: 40px;
             padding-top: 20px;
             border-top: 1px solid #eee;
-            text-align: center; /* Center content within the footer */
+            text-align: center;
         }
         .footer-text {
             color: #555;
             font-size: 1.2em;
             margin-bottom: 10px;
-            display: block; /* Ensures text takes its own line */
+            display: block;
         }
         .round-stamp {
-            display: block; /* Make it a block element to allow margin auto for centering */
-            margin: 0 auto; /* Center the image */
+            display: block;
+            margin: 0 auto;
+        }
+
+        /* Print Button Styles */
+        .print-button-container {
+            text-align: center;
+            margin-top: 30px;
+            padding-bottom: 20px; /* Add some padding below the button */
+        }
+        .print-button {
+            background-color: #4CAF50; /* Green */
+            color: white;
+            padding: 12px 25px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.1em;
+            transition: background-color 0.3s ease;
+        }
+        .print-button:hover {
+            background-color: #45a049;
+        }
+
+        /* Hide print button when printing */
+        @media print {
+            .print-button-container {
+                display: none;
+            }
+            body {
+                background-color: #fff; /* White background for print */
+            }
+            .container {
+                box-shadow: none; /* Remove shadow for print */
+                border: none; /* Remove border for print if desired */
+                padding: 0; /* Adjust padding for print */
+            }
+            /* Ensure text inputs and textareas show their content when printed */
+            input[type="text"],
+            textarea {
+                border: none; /* Remove borders for a cleaner printed look */
+                -webkit-print-color-adjust: exact; /* For WebKit browsers */
+                print-color-adjust: exact; /* Standard */
+            }
         }
     </style>
 </head>
@@ -145,6 +186,10 @@
         <div class="footer-section">
             <span class="footer-text">يعتمد إدارة المدرسة</span>
             <img src="Round-stamp-582x582.png" alt="ختم دائري" class="round-stamp" width="160" height="160">
+        </div>
+
+        <div class="print-button-container">
+            <button class="print-button" onclick="window.print()">طباعة الدعوة</button>
         </div>
     </div>
 </body>
