Update teacher recognition action description

--- a/novplan.html
+++ b/novplan.html
@@ -440,7 +440,7 @@
             { id: 7, action: "تفعيل المرافق المدرسية في إكساب الطلبة المهارات الأساسية", start: "2025/11/1", end: "2025/11/30", status: "نفذ", category: "academic", type: "تعليمي", priority: "متوسطة" },
             { id: 8, action: "المتابعة والتدقيق على الأعمال الكتابية وعرض النتائج مع فريق التحديين الداخلي", start: "2025/11/1", end: "2025/11/30", status: "نفذ", category: "academic", type: "متابعة", priority: "عالية" },
             { id: 9, action: "الاحتفاء بإنجاز الطالبات في الأعمال الكتابية وتكريمهن", start: "2025/11/15", end: "2025/11/30", status: "نفذ", category: "academic", type: "تحفيزي", priority: "متوسطة" },
-            { id: 10, action: "تكريم المعلمات المتغيرات في متابعة الأعمال الكتابية بشكل دوري", start: "2025/11/20", end: "2025/11/30", status: "نفذ", category: "teachers", type: "تحفيزي", priority: "منخفضة" },
+            { id: 10, action: "تكريم المعلمات المتميزات في متابعة الأعمال الكتابية بشكل دوري", start: "2025/11/20", end: "2025/11/30", status: "نفذ", category: "teachers", type: "تحفيزي", priority: "منخفضة" },
             { id: 11, action: "متابعة أثر التقدم في الأعمال الكتابية (التعايز، القروق، الفردية) ومقارنتها", start: "2025/11/1", end: "2025/11/30", status: "نفذ", category: "academic", type: "متابعة", priority: "عالية" },
             { id: 12, action: "تطبيق منهجية المعلمة الصغيرة في الحصص الدراسية في الحلقين الأولى والثانية لجميع الصفوف", start: "2025/11/1", end: "2025/11/15", status: "نفذ", category: "learning", type: "تعليمي", priority: "متوسطة" },
             { id: 13, action: "توظيف التعليم الذاتي والتفكير الابداعي من خلال المهارات البحثية. (الداخلة الصغيرة)", start: "2025/11/1", end: "2025/11/30", status: "نفذ", category: "learning", type: "تعليمي", priority: "عالية" },
