--- a/typing/stories.html
+++ b/typing/stories.html
@@ -278,7 +278,7 @@
             <!-- Added onclick to go back to main menu, and cursor-pointer for styling -->
             <h1 onclick="restartGame()" class="text-2xl font-bold text-blue-600 flex items-center gap-2 cursor-pointer hover:text-blue-800 transition-colors select-none">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg>
-                أبطال الحروف العربية
+                أبطال الحروف العربية - PIRLS 2026
             </h1>
             <div id="live-stats" class="hidden flex gap-4 text-lg font-bold">
                 <span class="text-blue-600">الوقت: <span id="timer">0</span>ث</span>
@@ -1074,4 +1074,5 @@
         })();
     </script>
 </body>
+
 </html>
