--- a/octoberplan.html
+++ b/octoberplan.html
@@ -517,25 +517,25 @@
         // بيانات الإجراءات لشهر أكتوبر 2025 - جميعها مكتملة
         const octoberProcedures = [
             { id: 1, action: "ورشة تدريبية وتعريفية لأولياء الامور حول المهارات والكفايات الأساسية في المواد الأساسية", start: "2025/10/1", end: "2025/10/1", status: "نفذ", category: "training" },
-            { id: 2, action: "تنفيذ آلية لتتبع مدى اكتساب الطالبات الكفايات الأساسية خلال الدروس مرتين في الفصل الدراسي", start: "2025/10/1", end: "2025/10/15", status: "نفذ", category:"evaluation"},
+            { id: 2, action: "تنفيذ آلية لتتبع مدى اكتساب الطالبات الكفايات الأساسية خلال الدروس ", start: "2025/10/1", end: "2025/10/15", status: "نفذ", category:"evaluation"},
             { id: 3, action: "تكريم المعلمات المتميزات في مجال الأعمال الكتابية بشكل دوري", start: "2025/10/1", end: "2025/10/20", status: "نفذ", category: "teachers" },
             { id: 4, action: "متابعة الأعمال الكتابية من خلال استمارة متابعة الأعمال الكتابية", start: "2025/10/1", end: "2025/10/25", status: "نفذ", category: "evaluation" },
             { id: 5, action: "تطبيق منهجية المعلمة الصغيرة في الحصص الدراسية في الحلقين الأولى والثانية", start: "2025/10/1", end: "2025/10/30", status: "نفذ", category: "teachers" },
             { id: 6, action: "قياس أثر التدريب على المعلمات والزيارات الصفية في مجال توظيف الاستراتيجيات", start: "2025/10/1", end: "2025/10/18", status: "نفذ", category: "evaluation" },
-            { id: 7, action: "قياس أثر التدريب على المعلمات والزيارات الصفية في مجال توظيف التقويم", start: "2025/10/1", end: "2025/10/22", status: "نفذ", category: "evaluation" },
-            { id: 8, action: "قياس أثر التدريب على المعلمات والزيارات الصفية في مجال عمليات التعليم والتعلم", start: "2025/10/1", end: "2025/10/28", status: "نفذ", category: "evaluation" },
+            { id: 7, action: "قياس أثر التدريب على المعلمات في الزيارات الصفية في مجال توظيف التقويم", start: "2025/10/1", end: "2025/10/22", status: "نفذ", category: "evaluation" },
+            { id: 8, action: "قياس أثر التدريب على المعلمات في الزيارات الصفية في مجال عمليات التعليم والتعلم", start: "2025/10/1", end: "2025/10/28", status: "نفذ", category: "evaluation" },
             { id: 9, action: "عقد لقاءات فردية وجماعية مع أولياء أمور طالبات التربية الخاصة", start: "2025/10/1", end: "2025/10/12", status: "نفذ", category: "training" },
             { id: 10, action: "دمج الطالبات في الحياة المدرسية من خلال المشاركة في الفعاليات والمناسبات الداخلية والخارجية ", start: "2025/10/1", end: "2025/10/14", status: "نفذ", category: "students" },
-            { id: 11, action: "اعداد نشرات تربوية تسهر في كيفية دعم فئات الطالبات", start: "2025/10/1", end: "2025/10/16", status: "نفذ", category: "teachers" },
-            { id: 12, action: "تنفيذ الحصص الارشادية للطالبات متدنيات التحصيل وتوجيههم برفع مستوى تحصيلهم", start: "2025/10/1", end: "2025/10/26", status: "نفذ", category: "students" },
+            { id: 11, action: "اعداد نشرات تربوية  في كيفية دعم فئات الطالبات", start: "2025/10/1", end: "2025/10/16", status: "نفذ", category: "teachers" },
+            { id: 12, action: "تنفيذ الجلسات الارشادية للطالبات متدنيات التحصيل وتوجيههم برفع مستوى تحصيلهم", start: "2025/10/1", end: "2025/10/26", status: "نفذ", category: "students" },
             { id: 13, action: "تنفيذ الاسبوع الثقافي الخاص بالتمكين الرقمي", start: "2025/10/1", end: "2025/10/24", status: "نفذ", category: "teachers" },
-            { id: 14, action: "إعداد اجتماعات دورية لمجلس الامهات", start: "2025/10/1", end: "2025/10/10", status: "نفذ", category: "teachers" },
+            { id: 14, action: "تنفيذ اجتماعات لمجلس الامهات", start: "2025/10/1", end: "2025/10/10", status: "نفذ", category: "teachers" },
             { id: 15, action: "إعداد خطة للصحة والسلامة المدرسية ولجنة إدارة الأزمات", start: "2025/10/1", end: "2025/10/8", status: "نفذ", category: "safety" },
             { id: 16, action: "متابعة الصيانة الدورية للمرافق المدرسية لتوفير بيئة آمنة خالية من المخاطر", start: "2025/10/1", end: "2025/10/5", status: "نفذ", category: "safety" },
-            { id: 17, action: "الصيانة الدورية لأجهزة الحريق ومبردات المياه", start: "2025/10/1", end: "2025/10/6", status: "نفذ", category: "safety" },
+            { id: 17, action: "الصيانة الدورية لطفايات الحريق ومبردات المياه", start: "2025/10/1", end: "2025/10/6", status: "نفذ", category: "safety" },
             { id: 18, action: "متابعة استكمال المتطلبات اللازمة لبرامج التمكين الرقمي", start: "2025/10/1", end: "2025/10/30", status: "نفذ", category: "teachers" },
             { id: 19, action: "تشكيل فريق الباحثة الصغيرة", start: "2025/10/1", end: "2025/10/1", status: "نفذ", category: "teachers" },
-            { id: 20, action: "إعداد حقيبة الباحثة الصغيرة", start: "2025/10/2", end: "2025/10/2", status: "نفذ", category: "teachers" },
+            { id: 20, action: "إعداد كراسة الباحثة الصغيرة", start: "2025/10/2", end: "2025/10/2", status: "نفذ", category: "teachers" },
             { id: 21, action: "تحليل نتائج الزيارات الصفية لشهر اكتوبر", start: "2025/10/15", end: "2025/10/20", status: "نفذ", category: "evaluation" },
             { id: 22, action: "تحليل أداء الطالبات في الاختبارات الشهرية", start: "2025/10/25", end: "2025/10/30", status: "نفذ", category: "evaluation" }
         ];
