Update actions and categories in sepplan.html

--- a/sepplan.html
+++ b/sepplan.html
@@ -396,10 +396,10 @@
             { id: 2, action: "تصنيف الطالبات بحسب مستوياتهن بناء على نتائج الاختبارات التشخيصية", start: "2025/9/29", end: "10/3/2025", status: "نفذ", category: "students" },
             { id: 3, action: "إعداد الخطط العلاجية والإثرائية بحسب تصنيف الطالبات وفقا للاختبارات", start: "2025/9/29", end: "10/3/2025", status: "نفذ", category: "plans" },
             { id: 4, action: "إعداد الأنشطة والتطبيقات للمواد الأساسية والتكميلية وفق الخطة الفصلية والزمنية بما يتناسب مع المستويات التعليمية", start: "2025/9/29", end: "10/3/2025", status: "نفذ", category: "plans" },
-            { id: 5, action: "تشكيل الهيكل التنظيمي لمشروع يظمى أبدع", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "teams" },
-            { id: 6, action: "إعداد خطة برنامج يظمى أبدع ومتابعتها", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "plans" },
+            { id: 5, action: "تشكيل الهيكل التنظيمي لمشروع بقلمي أبدع", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "teams" },
+            { id: 6, action: "إعداد خطة برنامج بقلمي أبدع ومتابعتها", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "plans" },
             { id: 7, action: "نشر ثقافة المشروع بين منتسبات المدرسة وذوي الصلحة", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "students" },
-            { id: 8, action: "إعداد اتفاقيات ومعايير الدفاتر النشاط البيئي والصفي", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "plans" },
+            { id: 8, action: "إعداد اتفاقيات في الكراسات والمذكرات", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "plans" },
             { id: 9, action: "إعداد استمارة معايير متابعة الأعمال الكتابية", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "plans" },
             { id: 10, action: "تشكيل الهيكل التنظيمي لفريق متابعة للاختبارات المركزية والدولية", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "teams" },
             { id: 11, action: "الاستفادة من نتائج الاختبارات التشخيصية والوقفات التقويمية في رفع الإنجاز في الاختبارات الدولية والوزارية", start: "2025/9/8", end: "9/8/2025", status: "نفذ", category: "tests" },
@@ -412,24 +412,24 @@
             { id: 18, action: "تنفيذ برنامج تهيئة الطالبات المستجدات", start: "2025/9/4", end: "2025/9/5", status: "نفذ", category: "students" },
             { id: 19, action: "تشكيل فريق لجنة الصحة والسلامة المدرسية وإعداد الخطة إعداد نشرات توعوية", start: "2025/9/15", end: "2025/9/17", status: "نفذ", category: "teams" },
             { id: 20, action: "حصر الطالبات ذوات الأمراض المزمنة وتعميم الحالات", start: "2025/9/18", end: "2025/9/19", status: "نفذ", category: "students" },
-            { id: 21, action: "تشكيل الهيكل التنظيمي للمشروع بصمات مليمة إعداد الخطة التنفيذية للمشروع", start: "2025/9/8", end: "2025/9/9", status: "نفذ", category: "teams" },
-            { id: 22, action: "حصر الاحتياجات التدريبية للمعلمات في مجال نشرة القانونية", start: "2025/9/10", end: "2025/9/12", status: "نفذ", category: "teachers" },
-            { id: 23, action: "تصنيف المعلمات ( المستجدات الأولى بالرعاية المتغيرات ) في مجال توظيف الاستراتيجيات", start: "2025/9/17", end: "2025/9/15", status: "نفذ", category: "teachers" },
-            { id: 24, action: "توزيع حقيبة للمعلمات المستجدات تتضمن معايير الدرس الجيد استمارة العلاقة الصفية، أساليب التقويم الفاعلة، بعض تصنيف المعلمات في مجال توظيف أساليب التقييم", start: "2025/9/18", end: "2025/9/22", status: "نفذ", category: "teachers" },
-            { id: 25, action: "حصر المعلمات الأولى بالرعاية في مجال الإدارة الصفية إعداد اتفاقية المعلم والطالب", start: "2025/9/23", end: "2025/9/25", status: "نفذ", category: "teachers" },
+            { id: 21, action: "تشكيل الهيكل التنظيمي للمشروع بصمات ملهمة وإعداد الخطة التنفيذية للمشروع", start: "2025/9/8", end: "2025/9/9", status: "نفذ", category: "teams" },
+            { id: 22, action: "حصر الاحتياجات التدريبية للمعلمات", start: "2025/9/10", end: "2025/9/12", status: "نفذ", category: "teachers" },
+            { id: 23, action: "تصنيف المعلمات ( المستجدات والأولى بالرعاية) في مجال توظيف الاستراتيجيات", start: "2025/9/17", end: "2025/9/15", status: "نفذ", category: "teachers" },
+            { id: 24, action: "توزيع حقيبة للمعلمات المستجدات تتضمن معايير الدرس الجيد ، أساليب التقويم الفاعلة،", start: "2025/9/18", end: "2025/9/22", status: "نفذ", category: "teachers" },
+            { id: 25, action: "حصر المعلمات الأولى بالرعاية في مجال الإدارة الصفية", start: "2025/9/23", end: "2025/9/25", status: "نفذ", category: "teachers" },
             { id: 26, action: "تهيئة البيئة المدرسية للطالبات الملتحقين ببرامج التربية الخاصة ( كتوفير دورات مياه خاصة - مواقف سيارات خاصة / منحدرات )", start: "2025/9/15", end: "2025/9/17", status: "نفذ", category: "students" },
-            { id: 27, action: "حصر الطالبات الموهوبات المتعثرات، طالبات التربية الخاصة والناطقات باللغة غير العربية من خلال استمارات", start: "2025/9/17", end: "2025/9/19", status: "نفذ", category: "students" },
-            { id: 28, action: "حصر الاحتياجات التدريبية للمعلمات في مجال التمكين", start: "2025/9/17", end: "2025/9/15", status: "نفذ", category: "teachers" },
-            { id: 34, action: "إعداد تشكيل هيكل المشروع، وتوزيع المهام بين العضوات", start: "2025/9/20", end: "2025/9/19", status: "نفذ", category: "teams" },
-            { id: 35, action: "إعداد الخطة التشغيلية لمشروع التمكين الرقمي لمدارس", start: "2025/9/12", end: "2025/9/10", status: "نفذ", category: "plans" },
+            { id: 27, action: "حصر الطالبات الموهوبات، المتعثرات، طالبات التربية الخاصة والناطقات باللغة غير العربية من خلال استمارات", start: "2025/9/17", end: "2025/9/19", status: "نفذ", category: "students" },
+            { id: 28, action: "حصر الاحتياجات التدريبية للمعلمات في مجال التمكين الرقمي", start: "2025/9/17", end: "2025/9/15", status: "نفذ", category: "teachers" },
+            { id: 34, action: "تشكيل هيكل مشروع التمكين الرقمي، وتوزيع المهام بين العضوات", start: "2025/9/20", end: "2025/9/19", status: "نفذ", category: "teams" },
+            { id: 35, action: "إعداد الخطة التشغيلية لمشروع التمكين الرقمي ", start: "2025/9/12", end: "2025/9/10", status: "نفذ", category: "plans" },
             { id: 36, action: "إعداد الخطة التنفيذية للمدرسة بناء على دراسة الواقع", start: "2025/9/5", end: "2025/9/25", status: "نفذ", category: "plans" },
-            { id: 37, action: "تفويض الصلاحيات وإعداد التكاليف لكل منتسبة مع العمل على إعداد صف", start: "2025/9/5", end: "2025/9/1", status: "نفذ", category: "plans" },
-            { id: 38, action: "تخصيص قناة على منصة التميز لنشر الممارسات المتعيزة داخل الصفوف (دروس أنشطة، إنجازات ……", start: "2025/9/5", end: "2025/9/1", status: "نفذ", category: "plans" },
-            { id: 39, action: "تشكيل فريق الصحة والسلامة المدرسية واجنة إدارة", start: "2025/9/15", end: "2025/9/1", status: "نفذ", category: "teams" },
-            { id: 40, action: "وضع إرشادات في الصفوف والممرات توعوية حول", start: "2025/9/15", end: "2025/9/1", status: "نفذ", category: "students" },
+            { id: 37, action: "تفويض الصلاحيات وإعداد التكاليف ", start: "2025/9/5", end: "2025/9/1", status: "نفذ", category: "plans" },
+            { id: 38, action: "تخصيص قناة على منصة التميز لنشر الممارسات المتميزة داخل الصفوف (دروس أنشطة، إنجازات ……", start: "2025/9/5", end: "2025/9/1", status: "نفذ", category: "plans" },
+            { id: 39, action: "تشكيل فريق الصحة والسلامة المدرسية ", start: "2025/9/15", end: "2025/9/1", status: "نفذ", category: "teams" },
+            { id: 40, action: "وضع إرشادات توعوية في الصفوف والممرات ", start: "2025/9/15", end: "2025/9/1", status: "نفذ", category: "students" },
             { id: 41, action: "إعداد الاختبارات التشخيصية التي تحدد مستويات الطالبات", start: "2025/9/30", end: "2025/9/21", status: "نفذ", category: "tests" },
             { id: 42, action: "تحليل الاختبارات التشخيصية المقدمة للطالبات ومناقشتها في اجتماعات الأقسام وفريق الدعم الداخلي", start: "2025/9/25", end: "2025/9/25", status: "نفذ", category: "tests" },
-            { id: 43, action: "تنفيذ ورشة تدريبية عن الأعمال الكتابية وأهميتها للهيئة", start: "2025/9/25", end: "2025/9/25", status: "نفذ", category: "teachers" },
+            { id: 43, action: "تنفيذ ورشة تدريبية عن الأعمال الكتابية وأهميتها", start: "2025/9/25", end: "2025/9/25", status: "نفذ", category: "teachers" },
             { id: 44, action: "تشكيل الهيكل التنظيمي لبرنامج الباحثة الصغيرة", start: "2025/9/29", end: "2025/9/29", status: "جاري", category: "teams" },
             { id: 45, action: "اعداد خطة لبرنامج الباحثة الصغيرة", start: "2025/9/8", end: "2025/9/8", status: "جاري", category: "plans" }
         ];
@@ -568,7 +568,7 @@
             // رسم بياني للفئات
             const categoryCtx = document.getElementById('categoryChart').getContext('2d');
             const categoryNames = {
-                'teams': 'فرق ولجان',
+                'teams': 'الإنجاز الأكاديمي',
                 'plans': 'خطط',
                 'students': 'طالبات',
                 'teachers': 'معلمات',
